# concept_visualizer

./: .flake8  .gitattributes  .gitignore  .last-activity.md  .pre-commit-config.yaml  README.md  TODO.md  V1_Refactor.md  migration_summary.md  package-lock.json  pyproject.toml  terminal_log.txt
.github/: SECRETS.md
Design/: Refactoring-ExportOptions.md  Setup.md  backend_scaling_vercel.md  concept_visualizer_design.md  data_cleanup_plan.md  design_concepts.md  design_system.md  final_refactor.md  fixing_SRA.md  frontend-supabase-integration.md  frontend_state_management_refactor.md  frontend_state_refactor.md  frontend_state_refactor_progress.md  gh_secret_automation.md  github_action_setup.md  how-to-implement-jwt-security.md  how-to-implement-rls.md  image_rate_limit.md  initial_concept.md  linter_type_error_cleanup.md  manage_dynamic_monitoring_resources.md  mobile_optimization.md  modal_preview_enhancement.md  project_structure.md  prompt_optimization.md  rate-limit-state-refactor.md  rate_limit_optimization.md  rate_limit_production_enhancements.md  realtime_design.md  refactoring_plan.md  session_optimization_plan.md  supabase_anonymous_auth_migration.md  supabase_setup_guide.md  supabase_signed_url_migration.md  supabase_storage_security.md  technical_explaination.md  theme_migration_plan.md  update_schema.md
TODO/: Backup_TODO.md  TODO copy.md  TODO.md  V1_Refactor.md  app_funct.md  backend-monitoring.md  backend_refacotr.md  backup_todo_before.md  ci-cd.md  cloud_monitoring.md  finished_task-14.md  frontend-backend.md  frontend-monitoring.md  plan-revised.md  (+14 more)
(+892 files in other folders)
